--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,11 +7,11 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 jobs:
-  build_and_deploy:
+  deploy_live_website:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo "DEPLOYING TO LIVE:\'home\'" && ls ~ && echo "\'./\'" && ls ./ && echo "\'../\'" && ls ../
+      - run: echo "DEPLOYING TO LIVE" && npm ci
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           entrypoint: nextjs-blog
@@ -19,5 +19,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACADIANBLUE }}'
           channelId: live
           projectId: acadianblue
+          target: ablue.app
         env: 
           FIREBASE_CLI_EXPERIMENTS: webframeworks
