--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo "DEPLOYING TO LIVE" && npm ci
+      - run: echo "DEPLOYING TO LIVE" && cd nextjs-blog && npm ci
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           entrypoint: nextjs-blog
