--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,10 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd nextjs-blog
+      - run: echo "PREVIEW DEPLOY" && cd nextjs-blog && npm ci
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          entrypoint: /nextjs-blog
+          entrypoint: nextjs-blog
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACADIANBLUE }}'
           projectId: acadianblue
+          target: ablue.app
+          expires: 14d
+        env: 
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
