--- a/.github/workflows/firebase-hosting-dev-preview.yml
+++ b/.github/workflows/firebase-hosting-dev-preview.yml
@@ -8,7 +8,7 @@ name: Deploy to Preview on push to dev
       - dev
 jobs:
   build_and_preview:
-    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
+    #if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
