--- a/.github/workflows/firebase-hosting-dev-preview.yml
+++ b/.github/workflows/firebase-hosting-dev-preview.yml
@@ -20,6 +20,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACADIANBLUE }}'
           projectId: acadianblue
           target: ablue.app
-          expires: 14d
+          expires: 1d
+          channelId: "dev-preview"
         env: 
           FIREBASE_CLI_EXPERIMENTS: webframeworks
