--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -4,7 +4,12 @@
   "description": "Node.js Restful CRUD API with Node.js, Express and MongoDB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "docker-build": "docker build -t your-app-name .",
+    "docker-run": "docker run -p 3000:3000 your-app-name",
+    "docker-stop": "docker stop $(docker ps -q --filter ancestor=your-app-name)",
+    "docker-clean": "docker rm $(docker ps -a -q --filter ancestor=your-app-name)"
   },
   "repository": {
     "type": "git",
@@ -25,7 +30,12 @@
   "homepage": "https://github.com/JordanPat/ablue.app#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
