--- a/app-backend/.env
+++ b/app-backend/.env
@@ -1,10 +1,7 @@
-DB_HOST=localhost
-DB_USER=root
+DB_HOST=cluster0.evadi6l.mongodb.net
+DB_USER=dbuser
 DB_PASSWORD=RMjRmdoRUpZ95Mpf
-DB_NAME=jpb_db
-DB_PORT=27017
-
-NODE_DOCKER_PORT=8080
+DB_NAME=workouts
+DB_PORT=5000
 
 CLIENT_ORIGIN=http://127.0.0.1:8081
-
