--- a/app-backend/.env
+++ b/app-backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=cluster0.evadi6l.mongodb.net
 DB_USER=dbuser
-DB_PASSWORD=RMjRmdoRUpZ95Mpf
+DB_PASSWORD=db_pass
 DB_NAME=workouts
 DB_PORT=5000
 
